# BabyEmotionRecognition

./: BabyBeacon.sh  BabySounds  CMakeLists.txt  Face_README.md  Makefile  README.md  install_libs.sh
include/: ADProcess_BabySounds.h  EmotionRecognizer.h  FaceDetection.h  Record_BabySounds.h
model/: Symptom_Detection_Model.keras  baby_emotions_model.h5  baby_emotions_model.weights.h5
python/: main.py  symptomPrediction.py
src/: ADProcess_BabySounds.cpp  EmotionRecognizer.cpp  EmotionRecognizer.h  FaceDetection.cpp  FaceDetection.h  Record_BabySounds.cpp  cppscript.cpp  main.cpp  rides_creator.cpp
